--- a/resources/view/pages/account/characteredit.html.twig
+++ b/resources/view/pages/account/characteredit.html.twig
@@ -399,7 +399,7 @@
 														<table style="width:100%">
 															<tbody>
 																<tr align="center">
-																	<td><input type="hidden" name="name" value="Warden'Druid"><input type="hidden" name="countryid" value=""><div class="BigButton" style="background-image:url({{ IMAGE_PATH }}/global/buttons/button_blue.gif)">
+																	<td><div class="BigButton" style="background-image:url({{ IMAGE_PATH }}/global/buttons/button_blue.gif)">
 																			<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{ IMAGE_PATH }}/global/buttons/button_blue_over.gif);"></div><input class="BigButtonText" type="submit" value="Submit"></div>
 																		</div>
 																	</td>
