--- a/resources/view/pages/account/lostaccount_first.html.twig
+++ b/resources/view/pages/account/lostaccount_first.html.twig
@@ -6,20 +6,13 @@
 	<div class="Border_2">
 		<div class="Border_3">
 			<div class="BoxContent" style="background-image:url({{IMAGE_PATH}}/global/content/scroll.gif);">
-				<h2>Welcome to the Lost Account Interface!</h2>
-				<p>If you have lost access to your account, this interface can help you. Of course, you need to prove that your claim to the account is justified. Enter the requested data and follow the instructions carefully. Please understand there is no way to get access to your lost account if the interface cannot help you. Further options to change account data are available if you have a registered account.</p>
-				<p>By using the Lost Account Interface you can</p>
-				<ul class="CustomBulletPointList" style="list-style-image: url({{IMAGE_PATH}}/global/content/bullet.gif);">
-					<li>get a new password if you have lost the current password,</li>
-					<li>get your account back if it has been hacked,</li>
-					<li>change the email address of your account instantly (only possible with a valid recovery key or a valid recovery TAN),</li>
-					<li>request a new recovery key/recovery TAN (only available to registered accounts),</li>
-					<li>remove an authenticator app from your account (only possible with a valid recovery key or a valid recovery TAN),</li>
-					<li>disable email code authentication for your account (only available to accounts with a valid recovery key).</li>
-				</ul>
-				<p></p>
-				<p>As a first step to use the Lost Account Interface, please enter the name of a character or the email address of your account and click on "Submit".</p>
-				<form action="{{URL}}/account/lostaccount" method="post">
+				<h2 style="text-align: center;">Email Address: {{ email }}</h2><br>
+                <p>The Lost Account Interface can help you to solve all problems listed below. Please select your problem and click on "Submit".</p>
+				<p>If your problem is not listed here, you might be able to find the answer on our website. Answers to the most common questions about Tibia can be found in the
+					FAQ. You can also consult the
+					manual. If you have questions concerning the security of your account, please take a look at the
+					security hints.</p>
+				<form action="{{URL}}/account/lostaccount/recoverykey" method="post">
 					<div class="TableContainer">
 						<div class="CaptionContainer">
 							<div class="CaptionInnerContainer">
@@ -27,7 +20,7 @@
 								<span class="CaptionEdgeRightTop" style="background-image:url({{IMAGE_PATH}}/global/content/box-frame-edge.gif);"></span>
 								<span class="CaptionBorderTop" style="background-image:url({{IMAGE_PATH}}/global/content/table-headline-border.gif);"></span>
 								<span class="CaptionVerticalLeft" style="background-image:url({{IMAGE_PATH}}/global/content/box-frame-vertical.gif);"></span>
-								<div class="Text">Recover by Email</div>
+								<div class="Text">Recover by Key</div>
 								<span class="CaptionVerticalRight" style="background-image:url({{IMAGE_PATH}}/global/content/box-frame-vertical.gif);"></span>
 								<span class="CaptionBorderBottom" style="background-image:url({{IMAGE_PATH}}/global/content/table-headline-border.gif);"></span>
 								<span class="CaptionEdgeLeftBottom" style="background-image:url({{IMAGE_PATH}}/global/content/box-frame-edge.gif);"></span>
@@ -50,15 +43,22 @@
 																<table class="TableContent" width="100%" style="border:1px solid #faf0d7;">
 																	<tbody>
 																		<tr>
+																			<td colspan="2">
+																				<b>Recovery Key</b><br>
+																				<hr class="InnerTableSeparator">
+																				<input type="text" name="key1" size="6" maxlength="5">-<input type="text" name="key2" size="6" maxlength="5">-<input type="text" name="key3" size="6" maxlength="5">-<input type="text" name="key4" size="6" maxlength="5">
+																			</td>
+																		</tr>
+																		<tr>
 																			<td>
-																				<div class="ThreeColumnsForm">
-																					<div class="LabelV ThreeColumnsFormCell">Email Address:</div>
-																					<div class="ThreeColumnsFormCell ThreeColumnsFormInputCell"><input name="email" maxlength="50"></div>
-																					<div class="ThreeColumnsFormCell ThreeColumnsFormButton"><div class="BigButton" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_blue.gif)">
-																							<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_blue_over.gif);"></div><input class="BigButtonText" type="submit" value="Submit"></div>
-																						</div>
-																					</div>
-																				</div>
+																				<b>New Password</b><br>
+																				<hr class="InnerTableSeparator">
+																				<input type="text" name="newpassword" size="30" maxlength="29">
+																			</td>
+																			<td>
+																				<b>Confirm Password</b><br>
+																				<hr class="InnerTableSeparator">
+																				<input type="text" name="newpasswordconfirm" size="30" maxlength="29">
 																			</td>
 																		</tr>
 																	</tbody>
@@ -73,7 +73,16 @@
 								</tr>
 							</tbody>
 						</table>
-					</div><br>
+					</div><br><table style="width:100%">
+						<tbody>
+							<tr align="center">
+								<td><div class="BigButton" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_green.gif)">
+										<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_green_over.gif);"></div><input class="BigButtonText" type="submit" value="Submit"></div>
+									</div>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</form>
 			</div>
 		</div>
